# Liberal-Crime-Squad

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Toolchain-cross-mingw32-linux.cmake  build-cross-linux-to-mingw.sh  build-linux.sh  configure.ac  toolchain-cross-linux-to-mingw.cmake
art/: augmentations.xml
lib/pdcurses/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  common.h  compat.cpp  compat.h  externs.h  includes.h  typecache.cpp  typecache.h
src/basemode/: activate.cpp  baseactions.cpp  basemode.cpp  reviewmode.cpp
src/combat/: chase.cpp  fight.cpp
src/common/: commonactions.cpp  commondisplay.cpp  squad.cpp
src/creature/: creature.cpp  creature.h  creaturetype.cpp  creaturetypes.cpp
src/daily/: activities.cpp  daily.cpp  date.cpp  interrogation.cpp  recruit.cpp  shopsnstuff.cpp  siege.cpp  siege.h
src/items/: armortype.cpp  clip.cpp
src/locations/: city.cpp  city.h  district.cpp  district.h  districttype.cpp  districttype.h  districttypecache.cpp  districttypecache.h  location.cpp  location.h  locations.cpp  locationtype.cpp  locationtype.h  locationtypecache.cpp  locationtypecache.h  world.cpp  world.h
src/log/: log.cpp  log.h
src/politics/: alignment.cpp  alignment.h  politics.cpp
src/sitemode/: advance.cpp  mapspecials.cpp  miscactions.cpp  shop.cpp  sitemode.cpp  stealth.cpp
src/title/: highscore.cpp  saveload.cpp  titlescreen.cpp
tests/: Makefile.am
tests/locations/: test-city.cpp  test-district.cpp  test-districttype.cpp  test-districttypecache.cpp  test-locationtype.cpp  test-locationtypecache.cpp  test-world.cpp
